syntax = "proto3";
package greet;

message Greeting{
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest{
	Greeting greeting = 1;
}

message GreetingResponse{
	string result = 1;
}
message GreetingResponseMany{
	string messageResult = 1;
}

message GreetRequestMany{
	string first_name = 1;
	string last_name = 2; 
}

service GreetingService{
	rpc Greet (GreetingRequest) returns (GreetingResponse){}
	rpc GreetMany (GreetingRequest) returns (stream GreetingResponseMany){}
	rpc GreetRequestManyTimes (stream GreetRequestMany) returns (GreetingResponse){}
}